# noir_recursion_pattern

./: .gitignore  Cargo.toml  Nargo.toml  README.md
circuits/inner1/: Nargo.toml  Prover.toml
circuits/inner1/src/: main.nr
circuits/inner2/: Nargo.toml  Prover.toml
circuits/inner2/src/: main.nr
circuits/outer/: Prover.toml
circuits/outer/src/: main.nr
scripts/: benchmark.sh  common.sh  download_transcript.sh  prove-honk.sh
src/: main.rs
